Optimize article list